--- a/.github/Dockerfile
+++ b/.github/Dockerfile
@@ -35,9 +35,6 @@ RUN DEBIAN_FRONTEND=noninteractive apt-get -y install --no-install-recommends \
     apt-get clean -y && \
     rm -rf /var/lib/apt/lists/*
 
-RUN go install google.golang.org/protobuf/cmd/protoc-gen-go@v1.28
-RUN go install google.golang.org/grpc/cmd/protoc-gen-go-grpc@v1.2
-
 # Install swagger-codegen
 ENV SWAGGER_CODEGEN_VERSION=2.4.8
 RUN wget https://repo1.maven.org/maven2/io/swagger/swagger-codegen-cli/${SWAGGER_CODEGEN_VERSION}/swagger-codegen-cli-${SWAGGER_CODEGEN_VERSION}.jar \
@@ -55,4 +52,19 @@ RUN go install github.com/bazelbuild/buildtools/buildifier@latest
 # Give vscode ownership of GOPATH
 RUN chown -R vscode: /go
 
+# To format proto file with vscode-proto3 extension
+RUN apt update && apt install clang-format --yes
+
+# Install the compiler for protocol buffer
+RUN curl -LO "https://github.com/protocolbuffers/protobuf/releases/download/v22.3/protoc-22.3-linux-x86_64.zip" && \
+    unzip protoc-22.3-linux-x86_64.zip -d /usr/local && \
+    rm protoc-22.3-linux-x86_64.zip
+
 USER vscode
+
+RUN go install mvdan.cc/gofumpt@v0.5.0 && \
+    curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s -- -b $(go env GOPATH)/bin v1.52.1 && \
+    # To generate gRPC files from proto for Golang
+    go install google.golang.org/protobuf/cmd/protoc-gen-go@v1.28 && \
+    go install google.golang.org/grpc/cmd/protoc-gen-go-grpc@v1.2 && \
+    export PATH="$PATH:$(go env GOPATH)/bin"
