--- a/.env
+++ b/.env
@@ -1,4 +1,9 @@
 # .env
 
 # Default port number for the application
-MYAPP_PORT=3000
+PORT=3000
+RPC_PORT=3001
+
+
+# Default application environment
+APP_ENV=production
